vmware guide: misc. improvements
- removed multi complex firewall section
- queue depth recommendation 256 -> 192
- add section links whereever section is referenced
- links at start to skip ahead to the cheatsheet
- bold all inline gui paths
- standardize on "Resources" h3 at end of sections with docs
- fix all extraneous backslashes
- move footnotes up into sections
- text for all URLs
- authors in resources
- document sections match sidebar, links work

--- a/_data/sidebars/guide_vmware.yml
+++ b/_data/sidebars/guide_vmware.yml
@@ -12,16 +12,16 @@ entries:
     folderitems:
     - title: Sizing & Performance
       output: web, pdf
-      url: '#datastore-sizing-and-performance'
+      url: '#sizing--performance'
     - title: Storage I/O Control
       output: web, pdf
       url: '#storage-io-control'
     - title: Storage Distributed Resource Scheduling
       output: web, pdf
-      url: '#storage-distributed-resource-scheduler-sdrs'
+      url: '#storage-distributed-resource-scheduling'
     - title: Multiple Classes of Storage
       output: web, pdf
-      url: '#offer-different-classes-of-storage'
+      url: '#multiple-classes-of-storage'
 
   - title: CONNECTING TO BLOCKBRIDGE
     output: web, pdf
@@ -30,18 +30,15 @@ entries:
     - title: iSCSI Multipathing
       output: web, pdf
       url: '#iscsi-multipathing'
-    - title: Multi-Complex Firewall Considerations
-      output: web, pdf
-      url: '#multi-complex-firewall'
     - title: Teamed Interfaces
       output: web, pdf
-      url: '#blockbridge-teamed-interface-configuration-notes'
+      url: '#teamed-interfaces'
     - title: Provisioning iSCSI Storage
       output: web, pdf
-      url: '#provisioning-a-blockbridge-service-disk-target-and-profile'
+      url: '#provisioning-iscsi-storage'
     - title: VMware Initiator Configuration
       output: web, pdf
-      url: '#connecting-vmware-to-a-blockbridge-target'
+      url: '#vmware-initiator-configuration'
     - title: Creating a VMFS Datastore
       output: web, pdf
       url: '#creating-a-vmfs-datastore'
@@ -52,22 +49,22 @@ entries:
     folderitems:
     - title: iSCSI LUN Queue Depth
       output: web, pdf
-      url: '#increase-the-iscsi-lun-queue-depth-to-256'
+      url: '#iscsi-lun-queue-depth'
     - title: SchedNumReqOutstanding Depth
       output: web, pdf
-      url: '#increase-the-schednumreqoutstanding-depth-to-64'
+      url: '#schednumreqoutstanding-depth'
     - title: Queue Depth Full
       output: web, pdf
-      url: '#default-do-not-alter-behavior-on-queue-full-conditions'
+      url: '#queue-depth-full'
     - title: Round Robin Path Selection IOPS Limit
       output: web, pdf
-      url: '#lower-the-round-robin-path-selection-iops-limit-to-8'
+      url: '#round-robin-path-selection-iops-limit'
     - title: VAAI Commands
       output: web, pdf
-      url: '#default-enable-vaai-commands'
+      url: '#vaai-commands'
     - title: Optimized ATS Heartbeating (VMFS-6)
       output: web, pdf
-      url: '#use-optimized-ats-heartbeating-vmfs-6'
+      url: '#optimized-ats-heartbeating-vmfs-6'
     - title: Halt VMs on Out-of-Space Conditions
       output: web, pdf
       url: '#halt-vms-on-out-of-space-conditions'
@@ -76,10 +73,10 @@ entries:
       url: '#jumbo-frames'
     - title: iSCSI Login Timeout
       output: web, pdf
-      url: '#increase-iscsi-login-timeout'
+      url: '#iscsi-login-timeout'
     - title: TCP DelayedAck
       output: web, pdf
-      url: '#leave-delayedack-at-its-default-enabled'
+      url: '#tcp-delayedack'
     - title: Large Receive Offload Maximum Length
       output: web, pdf
       url: '#large-receive-offload-maximum-length'
@@ -88,7 +85,7 @@ entries:
       url: '#nic-interrupt-balancing'
     - title: Mellanox Specific Optimizations
       output: web, pdf
-      url: '#mellanox-nic-tuning'
+      url: '#mellanox-specific-optimizations'
 
   - title: GUEST TUNING
     output: web, pdf
@@ -96,16 +93,16 @@ entries:
     folderitems:
     - title: Paravirtual SCSI Adapter
       output: web, pdf
-      url: '#use-the-paravirtual-scsi-adapter-in-guests'
+      url: '#paravirtual-scsi-adapter'
     - title: Virtual Machine Encryption
       output: web, pdf
-      url: '#disable-virtual-machine-encryption'
+      url: '#virtual-machine-encryption'
     - title: Zeroing Policies
       output: web, pdf
-      url: '#thin-lazy-zeroed-or-eager-zeroed'
+      url: '#zeroing-policies'
     - title: Guest I/O Latency & Consistency
       output: web, pdf
-      url: '#improving-guest-io-latency-and-latency-consistency'
+      url: '#guest-io-latency--consistency'
 
   - title: DEPLOYMENT & TUNING CHEATSHEET
     output: web, pdf
