--- a/_data/sidebars/guide_vmware.yml
+++ b/_data/sidebars/guide_vmware.yml
@@ -54,9 +54,9 @@ entries:
     - title: VMware Multipath Networking
       output: web, pdf
       url: '#vmware-multipath-networking'
-    - title: Teamed Interfaces
+    - title: LACP & Bonded Networking
       output: web, pdf
-      url: '#teamed-interfaces'
+      url: '#lacp--bonded-networking'
     - title: Provisioning iSCSI Storage
       output: web, pdf
       url: '#provisioning-iscsi-storage'
