remove navbar toggle button

--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ port: 4000
 # the port where the preview is rendered. You can leave this as is unless you have other Jekyll builds using this same port that might cause conflicts. in that case, use another port such as 4006.
 
 
+navbar_disable: true
 search_disable: true
 
 exclude:
