custom-certs: round of edits from jon and josh

--- a/_data/sidebars/custom_certs.yml
+++ b/_data/sidebars/custom_certs.yml
@@ -7,9 +7,9 @@ entries:
     output: web, pdf
     url: '#installing-a-custom-tls-key-and-certificate'
     folderitems:
-    - title: Copy Key and Certificate Files
+    - title: Copy Private Key and Certificate Files
       output: web, pdf
-      url: '#copy-private-key-and-certificate-files-to-each-primary-cluster-member'
+      url: '#copy-private-key-and-certificate-files'
     - title: Create a Custom Apache Config File
       output: web, pdf
       url: '#create-a-custom-apache-configuration-file'
