--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,15 @@ defaults:
       sidebar: custom_certs
 
   - scope:
+      path: "guide/kubernetes"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: kubernetes
+
+  - scope:
       path: "howto/volumes"
       type: "pages"
     values:
