--- a/_config.yml
+++ b/_config.yml
@@ -130,6 +130,15 @@ defaults:
       comments: false
       search: true
 
+  - scope:
+      path: "guide/proxmox"
+      type: "pages"
+    values:
+      layout: "page"
+      comments: false
+      search: true
+      sidebar: guide_proxmox
+
 plugins:
   - jekyll-redirect-from
 
