gitignore and jekyll exclude the top-level vendor & bundle dirs

--- a/_config.yml
+++ b/_config.yml
@@ -42,6 +42,8 @@ exclude:
   - Gemfile
   - Gemfile.lock
   - node_modules/
+  - vendor/
+  - bundle/
 
 # these are the files and directories that jekyll will exclude from the build
 
