Trim incomplete sections from proxmox guide
Removed content is tracked in #3

--- a/_data/sidebars/guide_proxmox.yml
+++ b/_data/sidebars/guide_proxmox.yml
@@ -40,7 +40,7 @@ entries:
     - title: Supported Versions
       output: web, pdf
       url: '#supported-versions'
-    - title: Driver Packages (FIX ME!)
+    - title: Driver Packages
       output: web, pdf
       url: '#driver-packages'
     - title: Driver Options
@@ -55,15 +55,6 @@ entries:
     - title: Proxmox Storage Definition
       output: web, pdf
       url: '#proxmox-storage-definition'
-    - title: Blockbridge Storage Templates (FIX ME!)
-      output: web, pdf
-      url: '#blockbridge-storage-templates'
-    - title: Multipath Configuration (FIX ME!)
-      output: web, pdf
-      url: '#'
-    - title: LACP & Bonded Networking (FIX ME!)
-      output: web, pdf
-      url: '#'
 
   - title: PROXMOX STORAGE PRIMITIVES
     output: web, pdf
@@ -99,129 +90,3 @@ entries:
     - title: Remove A Snapshot
       output: web, pdf
       url: '#remove-a-snapshot'
-    - title: Restoring From A Volume Snapshot (FIX ME!)
-      output: web, pdf
-      url: '#restoring-from-a-volume-snapshot'
-
-#  - title: PROXMOX STORAGE MANAGEMENT
-#    output: web, pdf
-#    url: '#proxmox-storage-management'
-#    folderitems:
-#    - title: Full Clone From VM
-#      output: web, pdf
-#      url: '#full-clone-from-vm'
-#    - title: Linked Clone From VM
-#      output: web, pdf
-#      url: '#linked-clone-from-vm'
-#    - title: Full Clone From Template
-#      output: web, pdf
-#      url: '#full-clone-from-template'
-#    - title: Linked Clone From Template
-#      output: web, pdf
-#      url: '#linked-clone-from-template'
-#    - title: VM Creation From ISO
-#      output: web, pdf
-#      url: '#vm-creation-from-iso'
-#    - title: VM Creation from Disk Image
-#      output: web, pdf
-#      url: '#vm-creation-from-disk-image'
-#    - title: Adding Storage To Running VM
-#      output: web, pdf
-#      url: '#adding-storage-to-running-vm'
-#    - title: Deleting Storage From Running VM
-#      output: web, pdf
-#      url: '#deleting-storage-from-running-vm'
-#    - title: Moving A Volume Between VMs
-#      output: web, pdf
-#      url: '#moving-a-volume-between-vms'
-#    - title: Migrating A Volume Between Pools
-#      output: web, pdf
-#      url: '#migrating-a-volume-between-pools'
-#
-#  - title: PROXMOX BACKUP & RECOVERY
-#    output: web, pdf
-#    url: '#proxmox-backup--recovery'
-#    folderitems:
-#    - title: Full Backup
-#      output: web, pdf
-#      url: '#full-backup'
-#    - title: Incremental Backup
-#      output: web, pdf
-#      url: '#incremental-backup'
-#    - title: Restore From Backup
-#      output: web, pdf
-#      url: '#restore-from-backup'
-#    - title: Restore From Rollback
-#      output: web, pdf
-#      url: '#restore-from-rollback'
-#
-#  - title: QEMU GUEST TUNING
-#    output: web, pdf
-#    url: '#qemu-guest-tuning'
-#    folderitems:
-#    - title: QEMU SCSI Controllers
-#      output: web, pdf
-#      url: '#qemu-scsi-controllers'
-#    - title: QEMU IO Threads
-#      output: web, pdf
-#      url: '#qemu-io-threads'
-#    - title: QEMU SSD Emulation
-#      output: web, pdf
-#      url: '#qemu-ssd-emulation'
-#    - title: QEMU Device Passthrough
-#      output: web, pdf
-#      url: '#qemu-device-passthrough'
-#
-#  - title: PROXMOX HOST TUNING
-#    output: web, pdf
-#    url: '#proxmox-host-tuning'
-#    folderitems:
-#    - title: Multipath IO Scheduling
-#      output: web, pdf
-#      url: '#multipath-io-scheduling'
-#    - title: NIC Large Receive Offload
-#      output: web, pdf
-#      url: '#nic-large-receive-offload'
-#    - title: NIC Interrupt Affinity
-#      output: web, pdf
-#      url: '#nic-interrupt-affinity'
-#    - title: NIC Interrupt Coalescing
-#      output: web, pdf
-#      url: '#nic-interrupt-coalescing'
-#    - title: Linux iSCSI Affinity
-#      output: web, pdf
-#      url: '#linux-iscsi-affinity'
-#    - title: Jumbo Frames
-#      output: web, pdf
-#      url: '#jumbo-frames'
-#    - title: VLAN Considerations
-#      output: web, pdf
-#      url: '#vlan-considerations'
-
-  - title: KNOWN ISSUES
-    output: web, pdf
-    url: '#known-issues'
-    folderitems:
-    - title: GUI Storage Types
-      output: web, pdf
-      url: '#gui-storage-types'
-    - title: GUI Storage Usage
-      output: web, pdf
-      url: '#gui-storage-usage'
-    - title: GUI Storage Configuration
-      output: web, pdf
-      url: '#gui-storage-configuration'
-    - title: Thin Clones of Snapshots
-      output: web, pdf
-      url: '#thin-clones-of-snapshots'
-    - title: Container Storage
-      output: web, pdf
-      url: '#container-storage'
-
-  - title: ADDITIONAL RESOURCES
-    output: web, pdf
-    url: '#additional-resources'
-    folderitems:
-    - title: Proxmox Documentation
-      output: web, pdf
-      url: '#proxmox-documentation'
